# cheese-trackers

./: .containerignore  Cargo.toml  Containerfile  INSTALL.md  LICENSE  README.md  build-image  mwtracker.schema.sql
.github/workflows/: docker-image.yml
frontend/: index.html  package-lock.json  package.json  podman-entrypoint
frontend/src/: App.vue  api.js  build.js  clipboard.js  container-breakpoints.js  error-modal.js  main.js  settings.js  time.js  types.js  util.js
frontend/src/components/: CancelableEdit.vue  ChecksBar.vue  DropdownSelector.vue  EnumDisplay.vue  GameDisplay.vue  HintDisplay.vue  HintPingIcon.vue  LockButton.vue  Modal.vue  OverwriteClaimButton.vue  Repeat.vue  RoomPortButton.vue  ShouldPing.vue  SlotDisplay.vue  SlotSummary.vue  TrackerChecksHistory.vue  TrackerContainer.vue  TrackerContainerHeader.vue  TrackerContainerSlot.vue  TrackerDescription.vue  TrackerSummary.vue  TrackerTable.vue  TrackerTableHeader.vue  TrackerTableSlot.vue  UsernameDisplay.vue
frontend/src/router/: index.js
frontend/src/views/: AuthComplete.vue  DashboardView.vue  HelpView.vue  OpenTrackerView.vue  SettingsView.vue  TrackerView.vue  TrackerViewProxy.vue
podman/: create-pod
server/: Cargo.toml  mwtracker.schema.sql
server-macros/: Cargo.toml
server-macros/src/: lib.rs
server/migrations/psql/: 0000_Initial.sql  0001_other_ap_servers.sql  0002_fix_dashboard_released.sql  0003_enum_casts.sql  0004_global_ping_preference.sql  0005_lock_settings.sql  0006_description.sql  0007_room_link.sql  0008_add_inactivity_thresholds.sql  0009_require_auth_to_claim.sql  0010_user_api_key.sql  0011_item_link_name.sql  0012_tracker_dashboard_override.sql  0013_user_away.sql  0014_hint_classification_rework.sql  0015_audit.sql  0016_audit_auth_source.sql  0017_tracker_dashboard_add_port.sql  0018_tracker_dashboard_add_upstream_url.sql  0019_ap_hint_finder_game_id_idx.sql  0020_ap_game_effective_discord_user_id.sql
server/podman/: create-pod  servers.json
server/src/: ap_api.rs  conf.rs  diff.rs  logging.rs  main.rs  send_hack.rs  signal.rs  state.rs  stream.rs  tracker.rs
server/src/api/: auth.rs  dashboard.rs  mod.rs  tracker.rs  user.rs
server/src/auth/: discord.rs  mod.rs  token.rs
server/src/db/: mod.rs  model.rs  pg.rs
src/: conf.rs  main.rs  signal.rs  tracker.rs
src/db/: mod.rs  model.rs
