[package]
name = "mw-async-tracker-server"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "symbols"
lto = "fat"

[dependencies]
async-stream = "0.3.5"
axum = "0.7.4"
chrono = { version = "0.4.33", features = ["serde"] }
config = "0.14.0"
futures = "0.3.30"
paste = "1.0.14"
reqwest = "0.11.24"
scraper = "0.18.1"
sea-query = { version = "0.30.7", default-features = false, features = [
    "backend-postgres",
    "derive",
    "sea-query-derive",
    "attr",
    "with-chrono",
] }
sea-query-binder = { version = "0.5.0", features = [
    "sqlx-postgres",
    "with-chrono",
] }
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["chrono", "postgres", "runtime-tokio"] }
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors", "fs"] }
url = "2.5.0"
