[package]
name = "cheese-trackers-server"
version = "0.1.0"
edition = "2021"

[features]
default = ["postgres"]
postgres = [
    "sea-query/backend-postgres",
    "sea-query-binder/sqlx-postgres",
    "sqlx/postgres",
]

[profile.release]
strip = "symbols"
lto = "fat"

[dependencies]
arrayvec = "0.7.4"
async-stream = "0.3.5"
axum = "0.7.4"
base64 = "0.21.7"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.33", features = ["serde"] }
config = "0.14.0"
futures = "0.3.30"
jsonwebtoken = "9.2.0"
moka = { version = "0.12.5", features = ["future"] }
oauth2 = "4.4.2"
paste = "1.0.14"
reqwest = "0.11.24"
scraper = "0.18.1"
sea-query = { version = "0.30.7", default-features = false, features = [
    "derive",
    "sea-query-derive",
    "attr",
    "with-chrono",
] }
sea-query-binder = { version = "0.5.0", features = ["with-chrono"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.117"
serenity = "0.12.0"
sqlx = { version = "0.7.3", features = ["chrono", "runtime-tokio"] }
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors", "fs"] }
tower-layer = "0.3.2"
url = { version = "2.5.0", features = ["serde"] }
